--- a/comentarios.html
+++ b/comentarios.html
@@ -29,7 +29,7 @@
                 <textarea id="comentario" name="comentario" required></textarea><br>
                 <button type="submit">Enviar</button>
             </form>
-           <!-- <button onclick="borrarComentarios()">Borrar Comentarios</button>-->
+           <button onclick="borrarComentarios()">Borrar Comentarios</button>
         </div>
 
     <footer>
